# gaia-audio

./: Cargo.toml  MODELS.md  README.md  install.sh
.github/workflows/: ci.yml
capture/: Cargo.toml  Containerfile
capture/src/: capture.rs  disk.rs  main.rs  server.rs
common/: Cargo.toml
common/src/: audio.rs  config.rs  detection.rs  discovery.rs  lib.rs  protocol.rs
examples/: bats_manifest.toml  birdnet3_manifest.toml  birds_manifest.toml  perch_manifest.toml  taxonomy_equivalences.toml
processing/: Cargo.toml  Containerfile  Containerfile.rocm  entrypoint.sh
processing/src/: accel.rs  agreement.rs  analysis.rs  client.rs  compress.rs  db.rs  download.rs  kv.rs  live_status.rs  main.rs  manifest.rs  migrate_parquet.rs  model.rs  parquet_store.rs  reporting.rs  smoke_test.rs  species_range.rs  spectrogram.rs  taxonomy.rs
processing/test-fixtures/: smoke-test-bird.opus
scripts/: convert_batdetect2_to_onnx.py  convert_keras_to_onnx.py  download_meta_tflite.py  download_test_audio.py  ort_worker.py  patch_birdnet3_onnx.py  smoke_test_ort.py  test_processing_container_e2e.sh  validate_onnx.py
web/: Cargo.toml  Containerfile
web/src/: app.rs  lib.rs  main.rs  model.rs
web/src/components/: calendar_grid.rs  detection_card.rs  hourly_chart.rs  live_analysis.rs  mod.rs  model_filter.rs  nav.rs  species_card.rs  urban_noise.rs
web/src/pages/: calendar.rs  day.rs  excluded.rs  home.rs  import.rs  learning.rs  mod.rs  settings.rs  species.rs  species_list.rs
web/src/server/: db.rs  detections_duckdb.rs  import.rs  inaturalist.rs  kv.rs  mod.rs  taxonomy_admin.rs
web/style/: main.css
