[package]
name = "gaia-processing"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gaia-processing"
path = "src/main.rs"

[dependencies]
gaia-common = { path = "../common" }

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
ctrlc.workspace = true

# Inference
tract-tflite.workspace = true
tract-onnx.workspace = true

# Storage
rusqlite.workspace = true

# Spectrogram
rustfft.workspace = true
image.workspace = true
hound.workspace = true

# HTTP client
reqwest.workspace = true

# Archive & checksum (Zenodo model download)
zip.workspace = true
md5.workspace = true

# Inference via ONNX Runtime — used as a fallback when tract-onnx
# cannot load a model (e.g. DFT/STFT ops in BirdNET V3), and as the
# GPU-accelerated path when ROCm hardware is detected at runtime.
#
# `load-dynamic` loads libonnxruntime.so at runtime — no native libs
# needed at build time.  `rocm` just exposes the MIGraphX/ROCm EP
# types; the actual GPU libraries only need to be present at runtime.
[dependencies.ort]
version = "2.0.0-rc.12"
features = ["load-dynamic", "rocm"]
