[package]
name = "gaia-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gaia-web"
path = "src/main.rs"

[dependencies]
# ── Core Leptos ──────────────────────────────────────────────
leptos       = "0.8"
leptos_router = "0.8"
leptos_meta  = "0.8"

# ── Shared (compiled for both native + wasm) ────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
cfg-if     = "1"

# ── SSR-only deps (server binary) ───────────────────────────
leptos_axum         = { version = "0.8", optional = true }
axum                = { version = "0.8", optional = true }
tokio               = { version = "1", features = ["full"], optional = true }
tower               = { version = "0.5", optional = true }
tower-http          = { version = "0.6", features = ["fs", "cors"], optional = true }
tracing             = { version = "0.1", optional = true }
tracing-subscriber  = { version = "0.3", features = ["env-filter"], optional = true }
libsql              = { version = "0.9", default-features = false, features = ["core"], optional = true }
duckdb              = { version = "1", features = ["bundled"], optional = true }
redis               = { workspace = true, optional = true }
reqwest             = { version = "0.12", features = ["json"], optional = true }
chrono              = { version = "0.4", optional = true }
http                = { version = "1", optional = true }
tar                 = { version = "0.4.45", optional = true }
mdns-sd             = { version = "0.18", optional = true }

# ── Hydrate-only deps (WASM client) ─────────────────────────
wasm-bindgen              = { version = "0.2", optional = true }
console_error_panic_hook  = { version = "0.1", optional = true }
web-sys                   = { version = "0.3", features = ["Window"], optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys",
]
ssr = [
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:libsql",
    "dep:duckdb",
    "dep:redis",
    "dep:reqwest",
    "dep:chrono",
    "dep:http",
    "dep:tar",
    "dep:mdns-sd",
]

[package.metadata.leptos]
output-name     = "gaia-web"
site-root       = "target/site"
site-pkg-dir    = "pkg"
style-file      = "style/main.css"
assets-dir      = "public"
site-addr       = "0.0.0.0:3000"
reload-port     = 3001
browserquery    = "defaults"
watch-additional-files = ["style"]
env             = "DEV"
bin-features    = ["ssr"]
bin-default-features  = false
lib-features    = ["hydrate"]
lib-default-features  = false
